--- a/Backend/Server/Server.csproj
+++ b/Backend/Server/Server.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="HotChocolate.AspNetCore" Version="11.0.0-preview.118" />
         <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.0.0-preview.118" />
         <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="11.0.0-preview.118" />
+        <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.1">
@@ -22,10 +23,6 @@
         </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.0" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="client" />
     </ItemGroup>
 
 </Project>
