--- a/Backend/Server/client/codegen.yml
+++ b/Backend/Server/client/codegen.yml
@@ -1,11 +1,35 @@
+schema: './schema.graphql'
 overwrite: true
-schema: 'https://spacexdata.herokuapp.com/graphql'
-documents: './src/components/**/*.ts'
+
+# Format files
+hooks:
+  afterAllFileWrite:
+    - prettier --write
 generates:
-  src/generated/graphql.tsx:
+  # Get schemas from server
+  src/queries/autogenerate/schema.tsx:
+    documents: 'src/queries/**/**.gql'
     plugins:
-      - 'typescript'
-      - 'typescript-operations'
-      - 'typescript-react-apollo'
+      - typescript
+  # Create operations based on queries
+  src/queries/autogenerate/operations.tsx:
+    documents: 'src/queries/**/**.gql'
+    preset: import-types
+    presetConfig:
+      typesPath: ./schemas
+    plugins:
+      - typescript-operations
+  # 1. Export GraphQL documents
+  # 2. React interface
+  src/queries/autogenerate/hooks.tsx:
+    documents: 'src/queries/**/**.gql'
+    preset: import-types
+    presetConfig:
+      typesPath: ./operations
+    plugins:
+      - typescript-react-apollo
     config:
+      # Optionals
+      withHOC: false
+      withComponent: false
       withHooks: true
