--- a/Backend/Server/client/package.json
+++ b/Backend/Server/client/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "schemas:watch": "npm run schemas -- --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
